--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,41 @@
 <resources>
     <string name="app_name">EDS云管理</string>
 
+    <!--Login-->
+    <string name="login_title">EDS</string>
+    <string name="login_sub_title">电力监控云管理平台</string>
+    <string name="login_username">用户名</string>
+    <string name="login_password">密码</string>
+    <string name="login_remember">记住我</string>
+    <string name="login_sign_in">登录</string>
+    <string name="login_failure">登录失败</string>
+    <!--Login Setting-->
+    <string name="setting_server">服务器</string>
+    <string name="setting_project">专案工程</string>
+    <string name="setting_node">监控节点</string>
+    <string name="setting_language">语言</string>
+    <string-array name="setting_languages">
+        <item>简体中文</item>
+        <item>繁体中文</item>
+        <item>English</item>
+    </string-array>
+    <string name="setting_apply">申请试用</string>
+    <string name="setting_email">hawesome.xu@xseec.cn</string>
+    <string name="setting_set">设置</string>
+
+    <!--MainActivity-->
+    <string name="main_failure">未加载到工程信息</string>
+    <string name="main_exit">退出</string>
+    <string name="nav_account">用户：%1$s</string>
+
+    <!--Nav Items-->
+    <string name="nav_overview">主页</string>
+    <string name="nav_schedule">计划任务</string>
+    <string name="nav_alarm">异常记录</string>
+    <string name="nav_trend">报表分析</string>
+    <string name="nav_setting">设置</string>
+    <string name="nav_exit">退出</string>
+
     <!--Overview-->
     <string name="overview_area">厦门士林厂</string>
     <string name="overview_update">更新: %1$s</string>
@@ -10,20 +45,22 @@
     <string name="overview_engineer">维护人员</string>
     <string name="overview_location">位置</string>
     <string name="overview_device_value">%1$d 台</string>
-
+    <string name="overview_item_tempreture">环境温度</string>
+    <string name="overview_item_humidity">环境湿度</string>
+    <string name="overview_item_activie_power">有功功率</string>
+    <string name="overview_item_reactive_power">无功功率</string>
+    <string name="overview_item_energy">今日用电</string>
+    <string name="overview_item_harmonic">谐波监测</string>
+    <string name="overview_item_detail">查看详情</string>
+    <string name="overview_state_on">运行</string>
+    <string name="overview_state_off">切断</string>
+    <string name="overview_state_alarm">异常</string>
+    <string name="overview_state_offline">离线</string>
     <string-array name="overview_status">
         <item>正常</item>
         <item>异常</item>
         <item>离线</item>
     </string-array>
-
-    <!--Nav Items-->
-    <string name="nav_overview">主页</string>
-    <string name="nav_schedule">计划任务</string>
-    <string name="nav_alarm">异常记录</string>
-    <string name="nav_trend">运行趋势</string>
-    <string name="nav_setting">设置</string>
-    <string name="nav_exit">退出</string>
 
     <!--WAService URL-->
     <string name="was_login">http://%1$s/WaWebService/Json/GetUserInfo/%2$s</string>
@@ -36,7 +73,23 @@
     <string name="was_readable_tag">{\"Name\":\"%1$s\"}</string>
     <string name="was_writable_tag">{\"Name\":\"%1$s\",\"Value\":%2$s}</string>
     <string name="was_storable_tag">{\"Name\":\"%1$s\",\"DataType\":\"%2$d\"}</string>
+    <string name="was_basic_info">http://%1$s/basic/%2$s/basic.json</string>
+    <string name="was_basic_header_img">http://%1$s/basic/%2$s/%3$s</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_login2">Sign in</string>
+
+    <!-- Strings related to login -->
+    <string name="prompt_email">Email</string>
+    <string name="prompt_password">Password (optional)</string>
+    <string name="action_sign_in">Sign in or register</string>
+    <string name="action_sign_in_short">Sign in</string>
+    <string name="error_invalid_email">This email address is invalid</string>
+    <string name="error_invalid_password">This password is too short</string>
+    <string name="error_incorrect_password">This password is incorrect</string>
+    <string name="error_field_required">This field is required</string>
+    <string name="permission_rationale">"Contacts permissions are needed for providing email
+        completions."
+    </string>
 </resources>
