--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">EDS云管理</string>
+    <string name="cancel">取消</string>
 
     <!--Login-->
     <string name="login_title">EDS</string>
@@ -121,6 +122,10 @@
     <string name="device_modify">修改</string>
     <string name="device_modify_success">修改成功，等待刷新</string>
     <string name="device_modify_fail">修改失败，请重试</string>
+    <string name="device_modify_refuse">请求已被拒绝</string>
+    <string name="device_modify_local">当前设备模式为：【本地】，不可进行远程操作</string>
+    <string name="device_modify_code">设备密码</string>
+    <string name="device_modify_code_error">密码错误</string>
 
     <!--Tag Alias-->
     <string name="tag_In">N相</string>
@@ -191,4 +196,5 @@
     <string name="title_activity_list">ListActivity</string>
     <string name="title_activity_device">DeviceActivity</string>
     <string name="title_activity_protect_setting">ProtectSettingActivity</string>
+    <string name="title_activity_verification_code">VerificationCodeActivity</string>
 </resources>
