--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,12 @@
 <resources>
     <string name="app_name">EDS云管理</string>
     <string name="cancel">取消</string>
+    <string name="share">分享</string>
     <string name="permission_checked">权限已获取，可继续操作</string>
     <string name="permission_unchecked">获取权限失败，拒绝此项操作</string>
+    <string name="cancel_edit">是否取消此次编辑？</string>
+    <string name="yes">是</string>
+    <string name="no">否</string>
 
     <!--Login-->
     <string name="login_title">EDS</string>
@@ -123,10 +127,11 @@
     <string name="device_off">OFF</string>
     <string name="device_protect_off">关闭</string>
     <string name="device_modify">修改</string>
-    <string name="device_modify_success">修改成功，等待刷新</string>
+    <string name="device_modify_success">修改成功，等待刷新(10s)</string>
     <string name="device_modify_fail">修改失败，请重试</string>
     <string name="device_modify_refuse">请求已被拒绝</string>
     <string name="device_modify_local">当前设备模式为：【本地】，不可进行远程操作</string>
+    <string name="device_modify_null">请稍后，数据尚未加载完成</string>
     <string name="device_modify_code">设备密码</string>
     <string name="device_modify_code_error">密码错误</string>
 
@@ -136,9 +141,12 @@
     <string name="workorder_due">近期</string>
     <string name="workorder_overdue">逾期</string>
     <string name="workorder_time">%1$s至%2$s</string>
+    <string name="workorder_id">工单ID</string>
     <string name="workorder_title">主旨</string>
     <string name="workorder_type">工单类型</string>
-    <string name="workorder_task">工单任务</string>
+    <string name="workorder_task">任务详情</string>
+    <string name="workorder_log">工单日志</string>
+    <string name="workorder_log_tips">执行记录……</string>
     <string name="workorder_task_tips">建议多行区分任务点</string>
     <string name="workorder_range">建议时间</string>
     <string name="workorder_location">运维位置</string>
@@ -149,11 +157,15 @@
     <string name="workorder_required">必填</string>
     <string name="workorder_nonull">必填项不能为空</string>
     <string name="workorder_fail">创建工单失败</string>
+    <string name="workorder_picker_error">图片尺寸不符合规范</string>
+    <string name="workorder_delete_confirm">是否删除工单？</string>
     <string-array name="workorder_types">
         <item>计划任务</item>
         <item>异常维护</item>
         <item>随工运维</item>
     </string-array>
+    <string name="workorder_album">相册</string>
+    <string name="workorder_camera">拍照</string>
 
     <!--Tag Alias-->
     <string name="tag_In">N相</string>
