--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">EDS云管理</string>
     <string name="cancel">取消</string>
+    <string name="ok">确定</string>
     <string name="share">分享</string>
     <string name="permission_checked">权限已获取，可继续操作</string>
     <string name="permission_unchecked">获取权限失败，拒绝此项操作</string>
@@ -44,6 +45,7 @@
     <string name="nav_alarm">异常管理</string>
     <string name="nav_action">操作记录</string>
     <string name="nav_trend">报表分析</string>
+    <string name="nav_energy">能耗查询</string>
     <string name="nav_setting">设置</string>
     <string name="nav_exit">退出</string>
 
@@ -181,6 +183,21 @@
     <string name="alarm_time">时间：%1$s</string>
     <string name="alarm_type">类型：%1$s</string>
 
+    <!--Energy-->
+    <string-array name="energy_tags">
+        <item>日</item>
+        <item>月</item>
+        <item>年</item>
+    </string-array>
+    <string-array name="energy_analysis">
+        <item>当前能耗</item>
+        <item>环比同期</item>
+        <item>环比值</item>
+    </string-array>
+    <string name="energy_pie_title">%1$s\n分支能耗 占比情况</string>
+    <string name="energy_bar_title">分支能耗统计(kW.h)</string>
+    <string name="energy_click_tip">*点击“占比情况”查看分支详情</string>
+
     <!--Tag Alias-->
     <string name="tag_In">N相</string>
     <string name="tag_Igf">接地</string>
@@ -206,6 +223,7 @@
     <string name="tag_EPout">有功输出(kW·h)</string>
     <string name="tag_EQout">无功输出(kVar·h)</string>
     <string name="tag_Ir">Ir(A)</string>
+    <string name="tag_IrReal">Ir(A)</string>
     <string name="tag_Tr">Tr(s)</string>
     <string name="tag_Isd">Isd(A)</string>
     <string name="tag_Tsd">Tsd(s)</string>
