--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,6 +32,7 @@
     <string name="setting_set">保存</string>
     <string name="setting_area">工程站点</string>
     <string name="setting_header">系统头图</string>
+    <string name="setting_device">资产编号</string>
 
 
     <!--MainActivity-->
@@ -46,7 +47,7 @@
     <string name="nav_action">操作记录</string>
     <string name="nav_trend">报表分析</string>
     <string name="nav_energy">能耗查询</string>
-    <string name="nav_setting">设置</string>
+    <string name="nav_setting">自定义</string>
     <string name="nav_exit">退出</string>
 
     <!--Overview-->
@@ -253,7 +254,7 @@
     <string name="svl_workorder_request">{\"id\":\"%1$s\",\"state\":%2$d,\"type\":%3$d,\"title\":\"%4$s\",\"task\":\"%5$s\",\"start\":\"%6$s\",\"end\":\"%7$s\",\"location\":\"%8$s\",\"worker\":\"%9$s\",\"log\":\"%10$s\",\"image\":\"%11$s\",\"creator\":\"%12$s\"}</string>
     <string name="svl_basic_query">http://%1$s:8080/EDSServlet/QueryBasicServlet?</string>
     <string name="svl_basic_update">http://%1$s:8080/EDSServlet/UpdateBasicServlet</string>
-    <string name="svl_basic_request">{\"id\":\"%1$s\",\"user\":\"%2$s\",\"banner\":\"%3$s\",\"pricipal\":\"%4$s\",\"location\":\"%5$s\",\"image\":\"%6$s\"}</string>
+    <string name="svl_basic_request">{\"id\":\"%1$s\",\"user\":\"%2$s\",\"banner\":\"%3$s\",\"pricipal\":\"%4$s\",\"location\":\"%5$s\",\"image\":\"%6$s\",\"alias\":\"%7$s\"}</string>
     <string name="svl_action_query">http://%1$s:8080/EDSServlet/QueryActionServlet?</string>
     <string name="svl_action_update">http://%1$s:8080/EDSServlet/UpdateActionServlet</string>
     <string name="svl_action_request">{\"id\":\"%1$s\",\"user\":\"%2$s\",\"action\":\"%3$s\",\"time\":\"%4$s\"}</string>
@@ -296,7 +297,6 @@
     <string name="action_devic">Device_3_%1$s设备远程分闸</string>
 
     <!--report-->  <!--nj:报表分析 2018/11/16-->
-    <string name="filter_time">%1$s至%2$s</string>
     <string name="report_energy">能耗情况</string>
     <string name="report_start_time">起始时间</string>
     <string name="report_end_time">结束时间</string>
