--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,8 +7,10 @@
     <string name="permission_unchecked">获取权限失败，拒绝此项操作</string>
     <string name="exit_confirm">确认要退出%1$s？/退出/取消</string>
     <string name="delete_confirm">删除此条记录？/删除/取消</string>
+    <!--nj 用户退出提示-->
+    <string name="current_user">确认要退出当前账号【%1$s】?/退出/取消</string>
     <string name="record_null">记录不存在</string>
-    <string name="function_null">功能待完善</string>
+    <string name="function_null">该功能待完善</string>
 
     <!--Login-->
     <string name="login_title">EDS</string>
@@ -18,6 +20,24 @@
     <string name="login_remember">记住我</string>
     <string name="login_sign_in">登录</string>
     <string name="login_failure">登录失败</string>
+
+    <!--nj 手机登录-->
+    <string name="login_phone_number">手机号码</string>
+    <string name="login_code">验证码</string>
+    <string name="login_code_gain">获取</string>
+    <string name="login_phone">手机快捷登录</string>
+    <string name="login_account">账号密码登录</string>
+    <string name="login_phone_unregistered">/该手机号在系统内未注册/取消</string>
+    <string name="login_phone_code_error">/验证码错误，请重新输入/重试</string>
+    <string name="login_phone_code_timeout">/验证超时，请重新获取验证码/好</string>
+    <string name="login_phone_failure">/未加载工程信息，登录失败/取消</string>
+    <string name="login_message_send">验证码已发送，请注意查收</string>
+
+    <!--User--> <!--nj:用户权限等级-->
+    <string name="user_admin">管理员</string>
+    <string name="user_operator">运维人员</string>
+    <string name="user_normal">普通访客</string>
+
     <!--Login Setting-->
     <string name="setting_server">服务器</string>
     <string name="setting_project">专案工程</string>
@@ -40,7 +60,7 @@
     <string name="main_failure">未加载到工程信息</string>
     <string name="main_exit">退出</string>
     <string name="nav_account">用户：%1$s</string>
-
+    <string name="nav_limit">权限：%1$s</string>
     <!--Nav Items-->
     <string name="nav_overview">主页</string>
     <string name="nav_workorder">运维工单</string>
@@ -48,8 +68,27 @@
     <string name="nav_action">操作记录</string>
     <string name="nav_report">报表分析</string>
     <string name="nav_energy">能耗查询</string>
+    <!--nj nav添加用户管理-->
+    <string name="nav_user">用户管理</string>
     <string name="nav_setting">自定义</string>
     <string name="nav_exit">退出</string>
+
+    <!--userManage-->  <!--nj-->
+    <string name="user_phone_number">手机号</string>
+    <string name="user_level">用户权限</string>
+    <string name="user_creator">创建</string>
+    <string name="user_update">修改</string>
+    <string name="user_created_number">已创建用户数：%1$s</string>
+    <string name="user_limit_number">最多创建：%1$s</string>
+    <string name="user_created">/该手机号已经注册，请重新输入/好</string>
+    <string name="user_wrong_format">/输入手机号为空或格式不正确，请重新输入/好</string>
+    <string name="user_create_confirm">创建:%1$s新用户?/创建/取消</string>
+    <string name="user_modify_confirm">对：%1$s用户进行修改?/修改/取消</string>
+    <string name="user_delete_confirm">删除：%1$s用户？/删除/取消</string>
+    <string name="user_fill">/当前用户注册数量已满，无法注册新用户/好</string>
+    <string-array name="user_level">
+        <item>普通访客</item>
+    </string-array>
 
     <!--Overview-->
     <string name="overview_area">厦门士林厂</string>
@@ -152,6 +191,9 @@
     <string name="device_modify_fail">修改失败，请重试</string>
     <string name="device_modify_refuse">请求已被拒绝</string>
     <string name="device_modify_local">当前设备模式为：【本地】，不可进行远程操作</string>
+    <!--nj  用户权限提示-->
+    <string name="device_modify_level">请求已被拒绝/当前用户身份为：【%1$s】, 不可进行参数修改/取消</string>
+    <string name="device_modify_control">请求已被拒绝/当前用户身份为：【%1$s】, 不可进行远程合分闸操作/取消</string>
     <string name="device_modify_null">请稍后，数据尚未加载完成</string>
     <string name="device_modify_code">设备密码</string>
     <string name="device_modify_code_error">密码错误</string>
@@ -377,12 +419,6 @@
     </string-array>
     <string-array name="report_temperture">
         <item>环境温度(℃)</item>
-        <item>最大值</item>
-        <item>最小值</item>
-        <item>平均值</item>
-    </string-array>
-    <string-array name="report_humidity">
-        <item>环境湿度(%)</item>
         <item>最大值</item>
         <item>最小值</item>
         <item>平均值</item>
