--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,7 +41,7 @@
     <string name="login_phone_code_timeout">/验证超时，请重新获取验证码/好</string>
     <string name="login_phone_failure">/未加载工程信息，登录失败/取消</string>
     <string name="login_message_send">验证码已发送，请注意查收</string>
-    <string name="login_24hour">24小时免验证</string>
+    <string name="login_24hour">1天免验证</string>
 
     <string name="user_admin_super">超级管理员</string>
     <string name="user_admin">系统管理员</string>
